[tool.poetry]
name = "HW_14_Web"
version = "0.1.0"
description = ""
authors = ["Barskyi <dedemo69@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
asyncpg = "^0.29.0"
fastapi = "^0.109.0"
alembic = "^1.13.0"
sqlalchemy = "^2.0.23"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi-users-db-sqlalchemy = "^6.0.1"
libgravatar = "^1.0.4"
pydantic = {extras = ["email"], version = "^2.5.2"}
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.37.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
